test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_return_type_fun_def.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[33]:
  void
  identifier(exit)
  (
  int
  identifier(status)
  )
  ;
  struct
  identifier(s)
  ;
  struct
  identifier(s)
  identifier(return_struct_def)
  (
  void
  )
  {
  identifier(exit)
  (
  const int(0)
  )
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
